# pytdx2

./: .gitignore  .mcp.json  CHANGELOG.md  PDF设计指南.md  QUICKSTART.md  README.md  ROADMAP.md  TDXMACDStrategy.py  WEB_README.md  const.py  demo.py  demo_board.py  demo_diff.py  demo_ext.py  doc.py  fix_bugs.py  fix_type_unions.py  generate_sample_data.py  marketdemo.py  pyproject.toml  requirements.txt  run_web.py  setup.py  tdxClient.py  test_advanced_backtest.py  test_backtest.py  test_fix.py  test_indicators_logic.py  test_ml_strategies.py  test_optimization.py  test_quotes_xor.py  test_sector_analysis.py  test_sector_logic.py  test_technical_indicators.py  test_visualization.py  商业宣传册.md  宣传单.md  截图展示.md  营销文案集.md
client/: __init__.py  baseStockClient.py  boardClient.py  exQuotationClient.py  macQuotationClient.py  marketClient.py  quotationClient.py
mcp/: API.md  mcpServer.py
opentdx/: __init__.py  cli.py  const.py  doc.py  tdxClient.py
opentdx/client/: ExQuotationClient.py  __init__.py  baseStockClient.py  commonClientMixin.py  exQuotationClient.py  macQuotationClient.py  quotationClient.py
opentdx/enums/: __init__.py  industry_code_enum.py
opentdx/parser/: baseParser.py
opentdx/utils/: bitmap.py  block_reader.py  heartbeat.py  help.py
parser/: baseparser.py  file.py  stock.py
parser/board_quotation/: __init__.py  board_list.py  board_members.py  board_members_quotes.py
parser/ex_quotation/: category_list.py  chart_sampling.py  count.py  ex_server.py  file.py  futures.py  futures_quotes.py  futures_quotes_list.py  goods.py  history_tick_chart.py  history_transaction.py  kline.py  kline2.py  list.py  quotes.py  quotes2.py  quotes_list.py  quotes_single.py  server.py  table.py  table_detail.py  tick_chart.py
parser/mac_quotation/: board_list.py  board_members.py  board_members_quotes.py  symbol_bar.py  symbol_belong_board.py
parser/market/: futures.py  instrument.py  market.py
parser/quotation/: auction.py  board_list.py  chart_sampling.py  company_info.py  count.py  file.py  history_orders.py  (+20 more)
tdx_mcp/: const.py  mcpServer.py  tdxClient.py
tests/: conftest.py  test_doc.py  test_ex_quotation_client.py  test_mac_quotation_client.py  test_quotation_client.py  test_tdx_client.py
utils/: block_reader.py  heartbeat.py  help.py
(+134 files in other folders)
