[project]
name = "opentdx"
version = "0.1.0"
description = "TDX stock data client — A股/期货/港股/美股行情数据接口"
authors = [{ name = "LisonEvf", email = "lisonevf@gmail.com" }]
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
keywords = ["stock", "tdx", "quant", "finance", "trading", "A-share", "futures"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pandas",
    "numpy",
    "click"
]

[project.urls]
Homepage = "https://github.com/LisonEvf/pytdx2"
Repository = "https://github.com/LisonEvf/pytdx2.git"
Issues = "https://github.com/LisonEvf/pytdx2/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"




[project.scripts]
opentdx = "opentdx.cli:cli"